openshift/network/policy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-openshift-ingress
  namespace: 9b301c-prod
spec:
  # This policy allows any pod with a route & service combination
  # to accept traffic from the OpenShift router pods. This is
  # required for things outside of OpenShift (like the Internet)
  # to reach your pods.
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
  podSelector: {}
  policyTypes:
    - Ingress

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-same-namespace
  namespace: 9b301c-prod
spec:
  # Allow all pods within the current namespace to communicate
  # to one another.
  podSelector:
  ingress:
    - from:
        - podSelector: {}
